--- a/templates/invoice/show.html.twig
+++ b/templates/invoice/show.html.twig
@@ -38,7 +38,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_invoice_index') }}">back to list</a>
+    <a href="{{ path('invoices') }}">back to list</a>
 
     <a href="{{ path('app_invoice_edit', {'id': invoice.id}) }}">edit</a>
 
