--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -12,7 +12,7 @@
         </aside>
         
         <section class="content">
-            <form class="search">
+            <form class="search" action="{{ path('search_client') }}" method="POST">
                 <fieldset>
                     <legend>Search</legend>
                     <label>Name : <input type="text" name="name" /></label>
