--- a/templates/quote/edit.html.twig
+++ b/templates/quote/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('quote/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_quote_index') }}">back to list</a>
+    <a href="{{ path('quotes') }}">back to list</a>
 
     {{ include('quote/_delete_form.html.twig') }}
 {% endblock %}
