--- a/templates/quote/index.html.twig
+++ b/templates/quote/index.html.twig
@@ -12,15 +12,15 @@
         </aside>
 
         <section class="content">
-            <form class="search">
+            <form class="search" action="{{ path('search_quote') }}" method="POST">
                 <fieldset>
                     <legend>Search</legend>
-                    <label>Date created : <input type="text" name="name" /></label>
-                    <label>Client : <input type="text" name="name" /></label>
-                    <label>Status : <input type="text" name="phone" /></label>
-                    <label>Total ht : <input type="text" name="email" /></label>
-                    <label>Total ttc : <input type="text" name="email" /></label>
-                    <label>Total tva : <input type="text" name="email" /></label>
+                    <label>Date created : <input type="text" name="date_created" /></label>
+                    <label>Client : <input type="text" name="client" /></label>
+                    <label>Status : <input type="text" name="status" /></label>
+                    <label>Total ht : <input type="text" name="total_ht" /></label>
+                    <label>Total ttc : <input type="text" name="total_ttc" /></label>
+                    <label>Total tva : <input type="text" name="total_tva" /></label>
                     <button type="submit" class="btn">Search</button>
                 </fieldset>
             </form>
@@ -30,6 +30,7 @@
                     <thead>
                         <tr>
                             <th>Id</th>
+                            <th>Client</th>
                             <th>Date created</th>
                             <th>Date valid</th>
                             <th>Status</th>
@@ -43,6 +44,7 @@
                         {% for quote in quotes %}
                             <tr>
                                 <td>{{ quote.id }}</td>
+                                <td>{{ quote.ClientId.name }}</td>
                                 <td>{{ quote.dateCreated ? quote.dateCreated|date('Y-m-d') : '' }}</td>
                                 <td>{{ quote.dateValid ? quote.dateValid|date('Y-m-d') : '' }}</td>
                                 <td>{{ quote.status }}</td>
@@ -56,7 +58,7 @@
                             </tr>
                         {% else %}
                             <tr>
-                                <td colspan="8">no records found</td>
+                                <td colspan="9">no records found</td>
                             </tr>
                         {% endfor %}
                     </tbody>
