--- a/templates/quote/new.html.twig
+++ b/templates/quote/new.html.twig
@@ -3,9 +3,16 @@
 {% block title %}New Quote{% endblock %}
 
 {% block body %}
-    <h1>Create new Quote</h1>
-
-    {{ include('quote/_form.html.twig') }}
-
-    <a href="{{ path('app_quote_index') }}">back to list</a>
+    <main id="container">
+        <aside class="menu">
+            <h1>Create new Quote</h1>
+            <ul>
+                <li><a href="{{ path('quotes') }}" class="btn">Quotes list</a></li>
+                <li><a href="{{ path('app_quote_new') }}" class="btn">Create new</a></li>
+            </ul>
+        </aside>
+        <section class="content">
+            {{ include('quote/_form.html.twig') }}
+        </section>
+    </main>
 {% endblock %}
