--- a/templates/quote/show.html.twig
+++ b/templates/quote/show.html.twig
@@ -38,7 +38,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_quote_index') }}">back to list</a>
+    <a href="{{ path('quotes') }}">back to list</a>
 
     <a href="{{ path('app_quote_edit', {'id': quote.id}) }}">edit</a>
 
