add module prestation + style templates

--- a/assets/styles/layouts/_layout.scss
+++ b/assets/styles/layouts/_layout.scss
@@ -78,7 +78,7 @@
                 text-decoration: none;
             }
         }
-        #invoice_form, #quote_form {
+        #invoice_form, #quote_form, #client_form, #prestation_form {
             width: 100%;
             // display: flex;
             justify-content: center;
