--- a/templates/client/edit.html.twig
+++ b/templates/client/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Edit Client{% endblock %}
 
 {% block body %}
-    <h1>Edit Client</h1>
-
-    {{ include('client/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('clients') }}">back to list</a>
-
-    {{ include('client/_delete_form.html.twig') }}
+    <main id="container">
+        <aside class="menu">
+            <h1>Edit Client</h1>
+            <ul>
+                <li><a href="{{ path('clients') }}" class="btn">Clients list</a></li>
+                <li><a href="{{ path('app_client_new') }}" class="btn">Create new</a></li>
+            </ul>
+        </aside>
+        <section class="content">
+            {{ include('client/_form.html.twig', {'button_label': 'Update'}) }}
+            {{ include('client/_delete_form.html.twig') }}
+        </section>
+    </main>
 {% endblock %}
