--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -3,9 +3,16 @@
 {% block title %}New Client{% endblock %}
 
 {% block body %}
-    <h1>Create new Client</h1>
-
-    {{ include('client/_form.html.twig') }}
-
-    <a href="{{ path('clients') }}">back to list</a>
+    <main id="container">
+        <aside class="menu">
+            <h1>Create new Client</h1>
+            <ul>
+                <li><a href="{{ path('clients') }}" class="btn">Clients list</a></li>
+                <li><a href="{{ path('app_client_new') }}" class="btn">Create new</a></li>
+            </ul>
+        </aside>
+        <section class="content">
+            {{ include('client/_form.html.twig') }}
+        </section>
+    </main>
 {% endblock %}
