--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -3,40 +3,48 @@
 {% block title %}Client{% endblock %}
 
 {% block body %}
-    <h1>Client</h1>
+    <main id="container">
+        <aside class="menu">
+            <h1>Client</h1>
+            <ul>
+                <li><a href="{{ path('app_client_new') }}" class="btn">Create new</a></li>
+                <li><a href="{{ path('clients') }}" class="btn">Clients list</a></li>
+            </ul>
+        </aside>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ client.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ client.name }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ client.email }}</td>
-            </tr>
-            <tr>
-                <th>Phone</th>
-                <td>{{ client.phone }}</td>
-            </tr>
-            <tr>
-                <th>Address</th>
-                <td>{{ client.address }}</td>
-            </tr>
-            <tr>
-                <th>Notes</th>
-                <td>{{ client.notes }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('clients') }}">back to list</a>
-
-    <a href="{{ path('app_client_edit', {'id': client.id}) }}">edit</a>
-
-    {{ include('client/_delete_form.html.twig') }}
+        <section class="content">
+            <div class="table-wrapper">
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <th>Id</th>
+                            <td>{{ client.id }}</td>
+                        </tr>
+                        <tr>
+                            <th>Name</th>
+                            <td>{{ client.name }}</td>
+                        </tr>
+                        <tr>
+                            <th>Email</th>
+                            <td>{{ client.email }}</td>
+                        </tr>
+                        <tr>
+                            <th>Phone</th>
+                            <td>{{ client.phone }}</td>
+                        </tr>
+                        <tr>
+                            <th>Address</th>
+                            <td>{{ client.address }}</td>
+                        </tr>
+                        <tr>
+                            <th>Notes</th>
+                            <td>{{ client.notes }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a href="{{ path('app_client_edit', {'id': client.id}) }}" class="btn-sm">edit</a>
+                {{ include('client/_delete_form.html.twig') }}
+            </div>
+        </section>
+    </main>
 {% endblock %}
